--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">gallery</string>
+    <string name="key_pixabay">12328769&#45;7402b39b42648d41ed33f1053</string>
 </resources>
